<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pozadie">


    <SeekBar
        android:id="@+id/numOfPlayers"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="129dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:max="3"
        android:progress="0"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="208dp"
        android:layout_height="500dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536">

        <TextView
            android:id="@+id/textViewMeno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="@string/meno" />

        <EditText
            android:id="@+id/EditTextHrac1"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:layout_width="208dp"
            android:layout_height="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:background="@color/boys"
            android:hint="@string/meno_hraca_1"
            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/EditTextHrac2"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:layout_width="208dp"
            android:layout_height="32dp"
            android:layout_marginBottom="50dp"
            android:background="@color/boys"
            android:hint="@string/meno_hraca_2"
            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/EditTextHrac3"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:layout_width="208dp"
            android:layout_height="32dp"
            android:layout_marginBottom="50dp"
            android:background="@color/boys"
            android:hint="@string/meno_hraca_3"
            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/EditTextHrac4"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:layout_width="208dp"
            android:layout_height="32dp"
            android:layout_marginBottom="50dp"
            android:background="@color/boys"
            android:hint="@string/meno_hraca_4"
            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/EditTextHrac5"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:layout_width="208dp"
            android:layout_height="32dp"
            android:layout_marginBottom="50dp"
            android:background="@color/boys"
            android:hint="@string/meno_hraca_5"
            android:textAlignment="center"
            android:textSize="25sp" />


        <EditText
            android:id="@+id/EditTextHrac6"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:layout_width="208dp"
            android:layout_height="32dp"
            android:background="@color/boys"
            android:hint="@string/meno_hraca_6"
            android:textAlignment="center"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="500dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536">

        <TextView
            android:id="@+id/textViewPohlavie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/pohlavie" />

        <Switch
            android:id="@+id/pohlavie1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="55dp"
            android:scaleX="1.75"
            android:scaleY="1.75"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/pohlavie2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="55dp"
            android:scaleX="1.75"
            android:scaleY="1.75"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/pohlavie3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="55dp"
            android:scaleX="1.75"
            android:scaleY="1.75"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/pohlavie4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="55dp"
            android:scaleX="1.75"
            android:scaleY="1.75"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/pohlavie5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="55dp"
            android:scaleX="1.75"
            android:scaleY="1.75"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/pohlavie6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:scaleX="1.75"
            android:scaleY="1.75"
            tools:ignore="UseSwitchCompatOrMaterialXml" />


    </LinearLayout>

    <Button
        android:id="@+id/pokracovatButtonNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokracovat"
        android:backgroundTint="@color/tlacitka"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>